# autodev

./: .gitignore  CLAUDE.md  PI-PARITY-PLAN.md  PLAN.md  README.md  ROADMAP.md  changelog.md  dev.sh  eslint.config.js  handoff.md  implement.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
browser-runner/: README.md  browser-runner.mjs  package-lock.json  package.json
demo/: README.md  multi-agent-demo.rec  multi-agent-demo.sh  multi-agent-demo.timing  multi-agent-demo.txt
docs/: recording-a-demo.md
examples/backends/: README.md  pi.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_event.rs  approvals.rs  audio_record.rs  backend_spec.rs  capture.rs  commands.rs  editor.rs  error.rs  extensions.rs  git.rs  handoff.rs  headless.rs  lib.rs  loop_engine.rs  main.rs  state.rs  task_split.rs  templates.rs  transcribe.rs  verify.rs  workspace.rs
src/components/: about-panel.test.tsx  about-panel.tsx  agent-grid.tsx  annotator.tsx  browser-handoff.tsx  help-panel.test.tsx  help-panel.tsx  loop-panel.test.tsx  loop-panel.tsx  prompt-composer.test.tsx  prompt-composer.tsx  rich-pane.tsx  settings-panel.test.tsx  settings-panel.tsx  status-footer.test.tsx  status-footer.tsx  terminal-pane.tsx  workspace-sidebar.tsx
src/lib/: agent-prompts.ts  agent-store.test.ts  agent-store.ts  annotate.test.ts  annotate.ts  bytes.test.ts  bytes.ts  composer.test.ts  difficulty.ts  extensions.test.ts  extensions.ts  hooks.test.ts  hooks.ts  ipc.test.ts  ipc.ts  mentions.ts  recorder.test.ts  recorder.ts  skills.test.ts  skills.ts  status.ts  task-split.test.ts  task-split.ts  templates.test.ts  templates.ts  theme.test.ts  theme.ts  workspace-store.test.ts  (+1 more)
