[package]
name = "autodev"
version = "0.1.0"
description = "Agentic development environment: run and manage many terminal coding agents in parallel."
authors = ["algorisys-oss"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the binary on Windows.
name = "autodev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
