[package]
name = "autodev"
version = "0.12.0"
description = "Agentic development environment: run and manage many terminal coding agents in parallel."
authors = ["algorisys-oss"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the binary on Windows.
name = "autodev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
portable-pty = "0.9"
base64 = "0.22"

# Linux only: grant the WebKitGTK webview microphone/camera permission so voice input works.
# Pinned to the version wry uses — the `WebView` type crosses the `with_webview` boundary, so a
# mismatch would be a type error. Bump this in lockstep if Tauri's webkit2gtk changes.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
